--- a/manifest.json
+++ b/manifest.json
@@ -68,5 +68,10 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "3"
+    "vueVersion" : "3",
+    "permissions": {
+        "Clipboard": {
+            "description": "用于复制助记词"
+        }
+    }
 }
