--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@ethersproject/wallet": "^5.7.0",
     "assert": "^2.1.0",
+    "axios": "^1.8.4",
+    "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
-    "ethers": "^6.13.5",
+    "ethers": "^5.7.2",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
@@ -11,7 +14,8 @@
     "stream-http": "^3.2.0",
     "tki-qrcode": "^0.1.6",
     "url": "^0.11.4",
-    "web3": "^4.16.0"
+    "web3": "^1.10.0",
+    "@scure/bip39": "^1.2.1"
   },
   "devDependencies": {
     "webpack": "^5.99.1",
