--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ethersproject/wallet": "^5.7.0",
+    "@scure/bip39": "^1.2.1",
     "assert": "^2.1.0",
     "axios": "^1.8.4",
     "bip39": "^3.1.0",
@@ -14,10 +15,11 @@
     "stream-http": "^3.2.0",
     "tki-qrcode": "^0.1.6",
     "url": "^0.11.4",
-    "web3": "^1.10.0",
-    "@scure/bip39": "^1.2.1"
+    "web3": "^1.10.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.3",
+    "vite": "^6.2.5",
     "webpack": "^5.99.1",
     "webpack-cli": "^6.0.1"
   }
