fix icon and change api for eth price

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # 忽略build目录及其内容
 /node_modules
+/unpackage
 
 # 忽略特定文件
 send_eth.js
@@ -9,3 +10,4 @@ send_eth.js
 # 例外规则（保留Debug目录下的important.txt）
 /node_modules
 /node_modules
+/unpackage
