--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "@ethersproject/wallet": "^5.7.0",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify/vue": "^4.3.0",
     "@scure/bip39": "^1.2.1",
     "assert": "^2.1.0",
     "axios": "^1.8.4",
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "cryptocurrency-icons": "^0.18.1",
     "ethers": "^5.7.2",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
